--- a/.github/workflows/run_screener.yml
+++ b/.github/workflows/run_screener.yml
@@ -4,7 +4,7 @@ name: Run Screener Hourly
 on:
   workflow_dispatch:    # 👈 manual trigger
   schedule:
-    - cron: '0 * * * *' # 👈 hourly
+    - cron: '40 3,4,5,6,7,8,9 * * 1-5'  # 9:10 AM to 3:10 PM IST (Mon–Fri). UTC 3:40 is 9:10am IST
 
 jobs:
   run-screener:
