--- a/.github/workflows/run_screener.yml
+++ b/.github/workflows/run_screener.yml
@@ -4,7 +4,7 @@ name: Run Screener Hourly
 on:
   workflow_dispatch:    # 👈 manual trigger
   schedule:
-    - cron: '40 3,4,5,6,7,8,9 * * 1-5'  # 9:10 AM to 3:10 PM IST (Mon–Fri). UTC 3:40 is 9:10am IST
+    - cron: '10 9-14 * * 1-5'  # 9:10 AM to 3:10 PM IST (Mon–Fri). UTC 3:40 is 9:10am IST
 
 jobs:
   run-screener:
@@ -26,4 +26,6 @@ jobs:
         env:
           # Put your Google service account JSON as a secret in GitHub (see Step 4)
           GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
+          TZ: "Asia/Kolkata"
+          LOCAL_TIME: "12:00"
         run: python screener_1h.py
